@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.788 2006-10-04 21:06:42 castaglia Exp $
+$Id: NEWS,v 1.789 2006-10-05 17:57:39 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -124,6 +124,10 @@ CVS
   (assuming proftpd was compiled using --enable-ipv6).
 - Bug 2847 - HiddenStores files not properly removed if data transfer times
   out.
+- Bug 2848 - Unable to properly parse config files using Windows-style line
+  endings.  Such line endings can appear in the proftpd.conf if the file
+  is transferred using Windows machines, or using FTP clients that do not
+  properly translate CRLF to LF when handling ASCII files.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
